src/pages/CategoryPage/CategoryPage.module.scss
@import 'styles/variables.scss';

.category {
  margin-top: 1rem;
  width: 100%;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 0 auto;
  width: 100%;
  min-height: 83vh;
  height: 100%;
}

.control {
  align-items: center;
  background-color: $white-color;
  border-radius: $border-radius;
  display: flex;
  gap: 0.5rem;
  justify-content: space-between;
  padding: 0.5rem;
  flex-wrap: wrap;
}

.productsList {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
}

